JESTKI COMMIT