@@ -24,7 +24,7 @@
  */
 package de.bluecolored.bluemap.common.commands.commands;
 
-import de.bluecolored.bluecommands.annotations.Command;
+import de.bluecolored.bluemap.common.commands.java8compat.annotations.Command;
 import de.bluecolored.bluemap.common.commands.Permission;
 import de.bluecolored.bluemap.common.plugin.Plugin;
 import de.bluecolored.bluemap.common.rendermanager.*;
@@ -38,6 +38,7 @@ import java.util.Comparator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static de.bluecolored.bluemap.common.commands.TextFormat.*;
 import static net.kyori.adventure.text.Component.text;
@@ -55,7 +56,7 @@ public class MapListCommand {
         List<Component> entries = maps.values().stream()
                 .sorted(Comparator.comparing(map -> map.getMapSettings().getSorting()))
                 .map(this::element)
-                .toList();
+                .collect(Collectors.toList());
 
         return paragraph("Maps", lines(entries));
     }
@@ -73,7 +74,13 @@ public class MapListCommand {
 
         long pendingCount = plugin.getRenderManager().getScheduledRenderTasks().stream()
                 .skip(1)
-                .filter(task -> task instanceof MapRenderTask mapTask && mapTask.getMap().equals(map))
+                .filter(task -> {
+                    if (task instanceof MapRenderTask) {
+                        MapRenderTask mapTask = (MapRenderTask) task;
+                        return mapTask.getMap().equals(map);
+                    }
+                    return false;
+                })
                 .count();
         if (pendingCount > 0) {
             icon = ICON_PENDING;
@@ -83,23 +90,109 @@ public class MapListCommand {
         }
 
         RenderTask task = plugin.getRenderManager().getCurrentRenderTask();
-        if (task instanceof MapRenderTask mapTask && mapTask.getMap().equals(map)) {
-            icon = ICON_IN_PROGRESS;
-            String format = switch (task) {
-                case MapUpdateTask ignored -> "is currently being updated: %";
-                case WorldRegionRenderTask ignored -> "is currently being updated: %";
-                case MapPurgeTask ignored -> "is currently being purged: %";
-                default -> "has a running task: %";
-            };
-            details.addFirst(format(format,
-                    text(String.format("%.3f%%", task.estimateProgress() * 100)).color(HIGHLIGHT_COLOR)
-            ).hoverEvent(HoverEvent.showText(text(task.getDescription()))));
+        if (task instanceof MapRenderTask) {
+            MapRenderTask mapTask = (MapRenderTask) task;
+            if (mapTask.getMap().equals(map)) {
+                icon = ICON_IN_PROGRESS;
+                String format = getTaskFormat(task);
+                details.addFirst(format(format,
+                        text(String.format("%.3f%%", task.estimateProgress() * 100)).color(HIGHLIGHT_COLOR)
+                ).hoverEvent(HoverEvent.showText(text(task.getDescription()))));
+            }
         }
 
         return lines(
-                icon.appendSpace().append(formatMap(map).color(HIGHLIGHT_COLOR)),
+                icon.append(Component.space()).append(formatMap(map).color(HIGHLIGHT_COLOR)),
                 details.isEmpty() ? null : details(BASE_COLOR, details)
         );
+    }
+
+    private Component formatMap(BmMap map) {
+        Component icon;
+        Component status;
+
+        if (plugin.getRenderManager().getTasks().stream()
+                .filter(task -> {
+                    if (task instanceof MapRenderTask) {
+                        MapRenderTask mapTask = (MapRenderTask) task;
+                        return mapTask.getMap().equals(map);
+                    }
+                    return false;
+                })
+                .findFirst().isPresent()) {
+            icon = ICON_IN_PROGRESS;
+            status = text("rendering").color(INFO_COLOR);
+        } else if (map.isFrozen()) {
+            icon = ICON_FROZEN;
+            status = text("frozen").color(FROZEN_COLOR);
+        } else if (map.isUpdated()) {
+            icon = ICON_UPDATED;
+            status = text("up-to-date").color(POSITIVE_COLOR);
+        } else {
+            icon = ICON_PENDING;
+            status = text("pending").color(INFO_COLOR);
+        }
+
+        return format("% % %",
+                icon,
+                text(map.getId()).color(HIGHLIGHT_COLOR),
+                status
+        ).color(BASE_COLOR);
+    }
+
+    private Component formatMapEntry(BmMap map) {
+        Component icon;
+        Component status;
+
+        if (plugin.getRenderManager().getTasks().stream()
+                .filter(task -> {
+                    if (task instanceof MapRenderTask) {
+                        MapRenderTask mapTask = (MapRenderTask) task;
+                        return mapTask.getMap().equals(map);
+                    }
+                    return false;
+                })
+                .findFirst().isPresent()) {
+            icon = ICON_IN_PROGRESS;
+            status = text("rendering").color(INFO_COLOR);
+        } else if (map.isFrozen()) {
+            icon = ICON_FROZEN;
+            status = text("frozen").color(FROZEN_COLOR);
+        } else if (map.isUpdated()) {
+            icon = ICON_UPDATED;
+            status = text("up-to-date").color(POSITIVE_COLOR);
+        } else {
+            icon = ICON_PENDING;
+            status = text("pending").color(INFO_COLOR);
+        }
+
+        return format("% % %",
+                icon,
+                text(map.getId()).color(HIGHLIGHT_COLOR),
+                status
+        ).color(BASE_COLOR);
+    }
+
+    private Component formatTask(RenderTask task) {
+        if (task instanceof MapRenderTask) {
+            MapRenderTask mapTask = (MapRenderTask) task;
+            return format("% %",
+                    ICON_IN_PROGRESS,
+                    text(mapTask.getMap().getId()).color(HIGHLIGHT_COLOR)
+            ).color(BASE_COLOR);
+        } else {
+            return format("% %",
+                    ICON_IN_PROGRESS,
+                    text(task.getClass().getSimpleName()).color(HIGHLIGHT_COLOR)
+            ).color(BASE_COLOR);
+        }
+    }
+
+    private String getTaskFormat(RenderTask task) {
+        if (task instanceof MapUpdateTask) return "is currently being updated: %";
+        if (task instanceof WorldRegionRenderTask) return "is currently being updated: %";
+        if (task instanceof MapPurgeTask) return "is currently being purged: %";
+        return "has a running task: %";
     }
 
 }
