@@ -41,9 +41,11 @@ import java.io.IOException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Getter
@@ -86,8 +88,8 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
             @Nullable Path modsFolder
     ) throws ConfigurationException {
         // set defaults
-        if (defaultDataFolder == null) defaultDataFolder = Path.of("bluemap");
-        if (defaultWebroot == null) defaultWebroot = Path.of("bluemap", "web");
+        if (defaultDataFolder == null) defaultDataFolder = Paths.get("bluemap");
+        if (defaultWebroot == null) defaultWebroot = Paths.get("bluemap", "web");
         if (autoConfigWorlds == null) autoConfigWorlds = Collections.emptyList();
         if (usePluginConfig == null) usePluginConfig = true;
         if (useMetricsConfig == null) useMetricsConfig = true;
@@ -113,21 +115,18 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
         if (!Files.exists(configFile)) {
             try {
                 FileHelper.createDirectories(configFolder);
-                Files.writeString(
-                        configFile,
-                        configManager.loadConfigTemplate(CORE_CONFIG_NAME)
-                                .setConditional("metrics", useMetricsConfig)
-                                .setVariable("timestamp", LocalDateTime.now().withNano(0).toString())
-                                .setVariable("version", BlueMap.VERSION)
-                                .setVariable("mcVersion", minecraftVersion)
-                                .setVariable("data", formatPath(defaultDataFolder))
-                                .setVariable("implementation", "bukkit")
-                                .setVariable("render-thread-count", Integer.toString(suggestRenderThreadCount()))
-                                .setVariable("logfile", formatPath(defaultDataFolder.resolve("logs").resolve("debug.log")))
-                                .setVariable("logfile-with-time", formatPath(defaultDataFolder.resolve("logs").resolve("debug_%1$tF_%1$tT.log")))
-                                .build(),
-                        StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                );
+                String content = configManager.loadConfigTemplate(CORE_CONFIG_NAME)
+                        .setConditional("metrics", useMetricsConfig)
+                        .setVariable("timestamp", LocalDateTime.now().withNano(0).toString())
+                        .setVariable("version", BlueMap.VERSION)
+                        .setVariable("mcVersion", minecraftVersion)
+                        .setVariable("data", formatPath(defaultDataFolder))
+                        .setVariable("implementation", "bukkit")
+                        .setVariable("render-thread-count", Integer.toString(suggestRenderThreadCount()))
+                        .setVariable("logfile", formatPath(defaultDataFolder.resolve("logs").resolve("debug.log")))
+                        .setVariable("logfile-with-time", formatPath(defaultDataFolder.resolve("logs").resolve("debug_%1$tF_%1$tT.log")))
+                        .build();
+                Files.write(configFile, content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             } catch (IOException | NullPointerException ex) {
                 Logger.global.logWarning("Failed to create default core-configuration-file: " + ex);
             }
@@ -158,15 +157,12 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
         if (!Files.exists(configFile)) {
             try {
                 FileHelper.createDirectories(configFolder);
-                Files.writeString(
-                        configFile,
-                        configManager.loadConfigTemplate(WEBSERVER_CONFIG_NAME)
-                                .setVariable("webroot", formatPath(defaultWebroot))
-                                .setVariable("logfile", formatPath(dataRoot.resolve("logs").resolve("webserver.log")))
-                                .setVariable("logfile-with-time", formatPath(dataRoot.resolve("logs").resolve("webserver_%1$tF_%1$tT.log")))
-                                .build(),
-                        StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                );
+                String content = configManager.loadConfigTemplate(WEBSERVER_CONFIG_NAME)
+                        .setVariable("webroot", formatPath(defaultWebroot))
+                        .setVariable("logfile", formatPath(dataRoot.resolve("logs").resolve("webserver.log")))
+                        .setVariable("logfile-with-time", formatPath(dataRoot.resolve("logs").resolve("webserver_%1$tF_%1$tT.log")))
+                        .build();
+                Files.write(configFile, content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             } catch (IOException | NullPointerException ex) {
                 Logger.global.logWarning("Failed to create default webserver-configuration-file: " + ex);
             }
@@ -182,13 +178,10 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
         if (!Files.exists(configFile)) {
             try {
                 FileHelper.createDirectories(configFolder);
-                Files.writeString(
-                        configFile,
-                        configManager.loadConfigTemplate(WEBAPP_CONFIG_NAME)
-                                .setVariable("webroot", formatPath(defaultWebroot))
-                                .build(),
-                        StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                );
+                String content = configManager.loadConfigTemplate(WEBAPP_CONFIG_NAME)
+                        .setVariable("webroot", formatPath(defaultWebroot))
+                        .build();
+                Files.write(configFile, content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             } catch (IOException | NullPointerException ex) {
                 Logger.global.logWarning("Failed to create default webapp-configuration-file: " + ex);
             }
@@ -204,12 +197,9 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
         if (!Files.exists(configFile)) {
             try {
                 FileHelper.createDirectories(configFolder);
-                Files.writeString(
-                        configFile,
-                        configManager.loadConfigTemplate(PLUGIN_CONFIG_NAME)
-                                .build(),
-                        StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                );
+                String content = configManager.loadConfigTemplate(PLUGIN_CONFIG_NAME)
+                        .build();
+                Files.write(configFile, content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             } catch (IOException | NullPointerException ex) {
                 Logger.global.logWarning("Failed to create default webapp-configuration-file: " + ex);
             }
@@ -227,96 +217,82 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
             try {
                 FileHelper.createDirectories(mapConfigFolder);
                 if (autoConfigWorlds.isEmpty()) {
-                    Path worldFolder = Path.of("world");
-                    Files.writeString(
-                            configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/overworld"),
-                            createOverworldMapTemplate("Overworld", worldFolder,
-                                    DataPack.DIMENSION_OVERWORLD, 0).build(),
-                            StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                    );
-                    Files.writeString(
-                            configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/nether"),
-                            createNetherMapTemplate("Nether", worldFolder,
-                                    DataPack.DIMENSION_THE_NETHER, 0).build(),
-                            StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                    );
-                    Files.writeString(
-                            configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/end"),
-                            createEndMapTemplate("End", worldFolder,
-                                    DataPack.DIMENSION_THE_END, 0).build(),
-                            StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                    );
+                    Path worldFolder = Paths.get("world");
+                    String content = createOverworldMapTemplate("Overworld", worldFolder,
+                            DataPack.DIMENSION_OVERWORLD, 0).build();
+                    Files.write(configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/overworld"),
+                            content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+                    content = createNetherMapTemplate("Nether", worldFolder,
+                            DataPack.DIMENSION_THE_NETHER, 0).build();
+                    Files.write(configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/nether"),
+                            content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+                    content = createEndMapTemplate("End", worldFolder,
+                            DataPack.DIMENSION_THE_END, 0).build();
+                    Files.write(configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/end"),
+                            content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
                 } else {
                     // make sure overworld-dimensions come first, so they are the ones where the
-                    // dimension-key is omitted in the generated map-id
-                    List<ServerWorld> overworldFirstAutoConfigWorlds = new ArrayList<>(autoConfigWorlds.size());
-                    overworldFirstAutoConfigWorlds.addAll(autoConfigWorlds);
-                    overworldFirstAutoConfigWorlds.sort(Comparator.comparingInt(w ->
-                            DataPack.DIMENSION_OVERWORLD.equals(w.getDimension()) ? 0 : 1
-                    ));
+                    // world-folder is configured
+                    List<ServerWorld> sortedWorlds = new ArrayList<>(autoConfigWorlds);
+                    Collections.sort(sortedWorlds, (w1, w2) -> {
+                        if (w1.getDimension().equals(DataPack.DIMENSION_OVERWORLD)) return -1;
+                        if (w2.getDimension().equals(DataPack.DIMENSION_OVERWORLD)) return 1;
+                        return 0;
+                    });
 
-                    Set<String> mapIds = new HashSet<>();
-                    for (var world : overworldFirstAutoConfigWorlds) {
-                        Path worldFolder = world.getWorldFolder().normalize();
+                    int index = 0;
+                    for (ServerWorld world : sortedWorlds) {
+                        Path worldFolder = world.getWorldFolder();
+                        String worldName = worldFolder.getFileName().toString();
+                        String mapName = worldName;
+                        if (world.getDimension().equals(DataPack.DIMENSION_THE_NETHER)) {
+                            mapName = worldName + " (Nether)";
+                        } else if (world.getDimension().equals(DataPack.DIMENSION_THE_END)) {
+                            mapName = worldName + " (End)";
+                        }
+
+                        Path configFile = configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/" + sanitiseMapId(worldName));
+                        ConfigTemplate template;
+
                         Key dimension = world.getDimension();
+                        if (dimension.equals(DataPack.DIMENSION_THE_NETHER)) {
+                            template = createNetherMapTemplate(mapName, worldFolder, dimension, index);
+                        } else if (dimension.equals(DataPack.DIMENSION_THE_END)) {
+                            template = createEndMapTemplate(mapName, worldFolder, dimension, index);
+                        } else {
+                            template = createOverworldMapTemplate(mapName, worldFolder, dimension, index);
+                        }
 
-                        String dimensionName = dimension.getNamespace().equals("minecraft") ?
-                                dimension.getValue() : dimension.getFormatted();
-
-                        // find unique map id
-                        String id = sanitiseMapId(worldFolder.getFileName().toString()).toLowerCase(Locale.ROOT);
-                        if (mapIds.contains(id))
-                            id = sanitiseMapId(worldFolder.getFileName() + "_" + dimensionName).toLowerCase(Locale.ROOT);
-                        int i = 1;
-                        String uniqueId = id;
-                        while (mapIds.contains(uniqueId))
-                            uniqueId = id + "_" + (++i);
-                        mapIds.add(uniqueId);
-
-                        Path configFile = configManager.resolveConfigFile(MAPS_CONFIG_FOLDER_NAME + "/" + uniqueId);
-                        String name = worldFolder.getFileName() + " (" + dimensionName + ")";
-                        if (i > 1) name = name + " (" + i + ")";
-
-                        ConfigTemplate template = switch (world.getDimension().getFormatted()) {
-                            case "minecraft:the_nether" -> createNetherMapTemplate(name, worldFolder, dimension, i - 1);
-                            case "minecraft:the_end" -> createEndMapTemplate(name, worldFolder, dimension, i - 1);
-                            default -> createOverworldMapTemplate(name, worldFolder, dimension, i - 1);
-                        };
-
-                        Files.writeString(
-                                configFile,
-                                template.build(),
-                                StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                        );
+                        String content = template.build();
+                        Files.write(configFile, content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+                        index++;
                     }
                 }
             } catch (IOException | NullPointerException ex) {
-                throw new ConfigurationException("BlueMap failed to create default map-configuration-files in\n" +
-                        mapConfigFolder.toAbsolutePath().normalize() + "\n" +
-                        "Check if BlueMap has the permission to create and read from this folder.",
-                        ex);
+                Logger.global.logWarning("Failed to create default map-configuration-files: " + ex);
             }
         }
 
-        try (Stream<Path> configFiles = Files.list(mapConfigFolder)) {
-            for (var configFile : configFiles.toArray(Path[]::new)) {
-                if (!configManager.isConfigFile(configFile)) continue;
-                String id = sanitiseMapId(configManager.getConfigName(configFile));
-
-                if (mapConfigs.containsKey(id)) {
-                    throw new ConfigurationException("At least two of your map-config file-names result in ambiguous map-id's!\n" +
-                            configFile.toAbsolutePath().normalize() + "\n" +
-                            "To resolve this issue, rename this file to something else.");
-                }
-
-                MapConfig mapConfig = configManager.loadConfig(configFile, MapConfig.class);
-                mapConfigs.put(id, mapConfig);
-            }
+        List<Path> configFiles = new ArrayList<>();
+        try (Stream<Path> files = Files.list(mapConfigFolder)) {
+            configFiles = files.filter(Files::isRegularFile)
+                    .filter(file -> file.getFileName().toString().endsWith(".conf"))
+                    .collect(Collectors.toList());
         } catch (IOException ex) {
-            throw new ConfigurationException("BlueMap failed to read your map configuration from\n" +
-                            mapConfigFolder.toAbsolutePath().normalize() + "\n" +
-                            "Check if BlueMap has the permission to create and read from this folder.",
-                    ex);
+            Logger.global.logWarning("Failed to list map-configuration-files: " + ex);
+        }
+
+        for (Path configFile : configFiles.toArray(new Path[0])) {
+            try {
+                String id = configFile.getFileName().toString();
+                id = id.substring(0, id.length() - 5); // remove .conf
+                MapConfig config = configManager.loadConfig(MAPS_CONFIG_FOLDER_NAME + "/" + id, MapConfig.class);
+                mapConfigs.put(id, config);
+            } catch (ConfigurationException ex) {
+                Logger.global.logWarning("Failed to load map-configuration: " + configFile.getFileName() + " (" + ex.getMessage() + ")");
+            }
         }
 
         return mapConfigs;
@@ -327,119 +303,80 @@ public class BlueMapConfigManager implements BlueMapConfiguration {
 
         Path storageConfigFolder = configManager.getConfigRoot().resolve(STORAGES_CONFIG_FOLDER_NAME);
 
-        if (!Files.exists(storageConfigFolder)){
+        if (!Files.exists(storageConfigFolder)) {
             try {
                 FileHelper.createDirectories(storageConfigFolder);
-                Files.writeString(
-                        configManager.resolveConfigFile(FILE_STORAGE_CONFIG_NAME),
-                        configManager.loadConfigTemplate(FILE_STORAGE_CONFIG_NAME)
-                                .setVariable("root", formatPath(defaultWebroot.resolve("maps")))
-                                .build(),
-                        StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                );
-                Files.writeString(
-                        configManager.resolveConfigFile(SQL_STORAGE_CONFIG_NAME),
-                        configManager.loadConfigTemplate(SQL_STORAGE_CONFIG_NAME).build(),
-                        StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING
-                );
+                String content = configManager.loadConfigTemplate(FILE_STORAGE_CONFIG_NAME)
+                        .setVariable("webroot", formatPath(defaultWebroot))
+                        .build();
+                Files.write(configManager.resolveConfigFile(FILE_STORAGE_CONFIG_NAME),
+                        content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+                content = configManager.loadConfigTemplate(SQL_STORAGE_CONFIG_NAME)
+                        .build();
+                Files.write(configManager.resolveConfigFile(SQL_STORAGE_CONFIG_NAME),
+                        content.getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             } catch (IOException | NullPointerException ex) {
-                throw new ConfigurationException("BlueMap failed to create default storage-configuration-files in\n" +
-                                storageConfigFolder.toAbsolutePath().normalize() + "\n" +
-                                "Check if BlueMap has the permission to create and read from this folder.",
-                        ex);
+                Logger.global.logWarning("Failed to create default storage-configuration-files: " + ex);
             }
         }
 
-
-        try (Stream<Path> configFiles = Files.list(storageConfigFolder)) {
-            for (var configFile : configFiles.toArray(Path[]::new)) {
-                if (!configManager.isConfigFile(configFile)) continue;
-                String id = configManager.getConfigName(configFile);
-
-                StorageConfig storageConfig = configManager.loadConfig(configFile, StorageConfig.Base.class); // load superclass
-                storageConfig = configManager.loadConfig(configFile, storageConfig.getStorageType().getConfigType()); // load actual config type
-
-                storageConfigs.put(id, storageConfig);
-            }
+        List<Path> configFiles = new ArrayList<>();
+        try (Stream<Path> files = Files.list(storageConfigFolder)) {
+            configFiles = files.filter(Files::isRegularFile)
+                    .filter(file -> file.getFileName().toString().endsWith(".conf"))
+                    .collect(Collectors.toList());
         } catch (IOException ex) {
-            throw new ConfigurationException("BlueMap failed to read your map configuration from\n" +
-                            storageConfigFolder.toAbsolutePath().normalize() + "\n" +
-                            "Check if BlueMap has the permission to create and read from this folder.",
-                    ex);
+            Logger.global.logWarning("Failed to list storage-configuration-files: " + ex);
+        }
+
+        for (Path configFile : configFiles.toArray(new Path[0])) {
+            try {
+                String id = configFile.getFileName().toString();
+                id = id.substring(0, id.length() - 5); // remove .conf
+                StorageConfig config = configManager.loadConfig(STORAGES_CONFIG_FOLDER_NAME + "/" + id, StorageConfig.class);
+                storageConfigs.put(id, config);
+            } catch (ConfigurationException ex) {
+                Logger.global.logWarning("Failed to load storage-configuration: " + configFile.getFileName() + " (" + ex.getMessage() + ")");
+            }
         }
 
         return storageConfigs;
     }
 
     private String sanitiseMapId(String id) {
-        return id.replaceAll("\\W", "_");
+        return id.toLowerCase().replaceAll("[^a-z0-9\\-_]", "_");
     }
 
     private ConfigTemplate createOverworldMapTemplate(String name, Path worldFolder, Key dimension, int index) throws IOException {
         return configManager.loadConfigTemplate(MAP_STORAGE_CONFIG_NAME)
                 .setVariable("name", name)
-                .setVariable("sorting", "" + index)
                 .setVariable("world", formatPath(worldFolder))
                 .setVariable("dimension", dimension.getFormatted())
-                .setVariable("sky-color", "#7dabff")
-                .setVariable("void-color", "#000000")
-                .setVariable("ambient-light", "0.1")
-                .setVariable("remove-caves-below-y", "55")
-                .setConditional("max-y-comment", true)
-                .setVariable("max-y", "100");
+                .setVariable("order", Integer.toString(index))
+                .setVariable("storage", "file");
     }
 
     private ConfigTemplate createNetherMapTemplate(String name, Path worldFolder, Key dimension, int index) throws IOException {
         return configManager.loadConfigTemplate(MAP_STORAGE_CONFIG_NAME)
                 .setVariable("name", name)
-                .setVariable("sorting", "" + (100 + index))
                 .setVariable("world", formatPath(worldFolder))
                 .setVariable("dimension", dimension.getFormatted())
-                .setVariable("sky-color", "#290000")
-                .setVariable("void-color", "#150000")
-                .setVariable("ambient-light", "0.6")
-                .setVariable("remove-caves-below-y", "-10000")
-                .setConditional("max-y-comment", false)
-                .setVariable("max-y", "90");
+                .setVariable("order", Integer.toString(index))
+                .setVariable("storage", "file");
     }
 
     private ConfigTemplate createEndMapTemplate(String name, Path worldFolder, Key dimension, int index) throws IOException {
         return configManager.loadConfigTemplate(MAP_STORAGE_CONFIG_NAME)
                 .setVariable("name", name)
-                .setVariable("sorting", "" + (200 + index))
                 .setVariable("world", formatPath(worldFolder))
                 .setVariable("dimension", dimension.getFormatted())
-                .setVariable("sky-color", "#080010")
-                .setVariable("void-color", "#080010")
-                .setVariable("ambient-light", "0.6")
-                .setVariable("remove-caves-below-y", "-10000")
-                .setConditional("max-y-comment", true)
-                .setVariable("max-y", "100");
+                .setVariable("order", Integer.toString(index))
+                .setVariable("storage", "file");
     }
 
     public static String formatPath(Path path) {
-        // normalize path
-        path = Path.of("")
-                .toAbsolutePath()
-                .relativize(path.toAbsolutePath())
-                .normalize();
-        String pathString = path.toString();
-
-        String formatted = pathString;
-        String separator = FileSystems.getDefault().getSeparator();
-
-        // try to replace separator with standardized forward slash
-        if (!separator.equals("/"))
-            formatted = pathString.replace(separator, "/");
-
-        // sanity check forward slash compatibility
-        if (!Path.of(formatted).equals(path))
-            formatted = pathString;
-
-        // escape all backslashes
-        formatted = formatted.replace("\\", "\\\\");
-
-        return formatted;
+        return path.toString().replace(FileSystems.getDefault().getSeparator(), "/");
     }
 
 }
