@@ -24,19 +24,20 @@
  */
 package de.bluecolored.bluemap.core.world.mca.data;
 
+import com.google.gson.reflect.TypeToken;
 import de.bluecolored.bluemap.core.logger.Logger;
 import de.bluecolored.bluemap.core.world.Entity;
 import de.bluecolored.bluemap.core.world.mca.entity.EntityType;
 import de.bluecolored.bluemap.core.world.mca.entity.MCAEntity;
-import de.bluecolored.bluenbt.TypeResolver;
-import de.bluecolored.bluenbt.TypeToken;
+import de.bluecolored.bluemap.core.util.nbt.TypeResolver;
 
 import java.io.IOException;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class EntityTypeResolver implements TypeResolver<Entity, MCAEntity> {
 
-    private static final TypeToken<MCAEntity> TYPE_TOKEN = TypeToken.of(MCAEntity.class);
+    private static final TypeToken<MCAEntity> TYPE_TOKEN = TypeToken.get(MCAEntity.class);
 
     @Override
     public TypeToken<MCAEntity> getBaseType() {
@@ -47,7 +48,7 @@ public class EntityTypeResolver implements TypeResolver<Entity, MCAEntity> {
     public TypeToken<? extends Entity> resolve(MCAEntity base) {
         EntityType type = EntityType.REGISTRY.get(base.getId());
         if (type == null) return TYPE_TOKEN;
-        return TypeToken.of(type.getEntityClass());
+        return TypeToken.get(type.getEntityClass());
     }
 
     @Override
@@ -56,15 +57,15 @@ public class EntityTypeResolver implements TypeResolver<Entity, MCAEntity> {
                 Stream.of(TYPE_TOKEN),
                 EntityType.REGISTRY.values().stream()
                         .map(EntityType::getEntityClass)
-                        .<TypeToken<? extends Entity>> map(TypeToken::of)
+                        .<TypeToken<? extends Entity>>map(TypeToken::get)
                 )
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public Entity onException(IOException parseException, MCAEntity base) {
-        Logger.global.logDebug("Failed to parse block-entity of type '%s': %s"
-                .formatted(base.getId(), parseException));
+        Logger.global.logDebug(String.format("Failed to parse block-entity of type '%s': %s",
+                base.getId(), parseException));
         return base;
     }
 
