@@ -187,12 +187,12 @@ public class FabricMod implements ModInitializer, Server {
 
     @Override
     public Path getConfigFolder() {
-        return Path.of("config", "bluemap");
+        return Paths.get("config", "bluemap");
     }
 
     @Override
     public Optional<Path> getModsFolder() {
-        return Optional.of(Path.of("mods"));
+        return Optional.of(Paths.get("mods"));
     }
 
     public void onPlayerJoin(MinecraftServer server, ServerPlayerEntity playerInstance) {
